--- a/src/pages/AdminUsers/AdminUsers.css
+++ b/src/pages/AdminUsers/AdminUsers.css
@@ -1,7 +1,8 @@
-.padre {
+.father {
     background: linear-gradient(180deg, rgba(46, 72, 123, 1) 0%, rgba(92, 146, 181, 1) 50%, rgba(147, 218, 178, 1) 100%);
 }
-.admin-products-h1 {
+
+.admin-user-h1 {
     color: white;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -13,7 +14,7 @@
     overflow-x: auto;
 }
 
-.admin-table {
+.user-table {
     margin: 32px auto;
     background-color: white;
     border-collapse: collapse;
@@ -24,12 +25,6 @@
         th {
             padding: 16px;
         }
-        .price {
-            width: 130px;
-        }
-        .product {
-            width: 220px;
-        }
     }
 
     tbody {
@@ -39,11 +34,6 @@
         td {
             text-align: center;
             padding: 16px;
-
-            img {
-                width: 60px;
-                height: 75px;
-            }
 
             button {
                 cursor: pointer;
@@ -75,7 +65,7 @@
     }
 }
 
-.admin-form{
+.user-form{
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);    
     padding: 16px;
     margin: 10px auto;
@@ -96,12 +86,15 @@
             width: 100%;
             box-sizing: border-box;
         }
-        .admin-btn{
-            cursor: pointer;
-        }
     }
 
-    .admin-btn[disabled] {
+    .user-btn{
+            cursor: pointer;
+            padding: 8px;
+            margin-top: 8px;
+        }
+
+    .user-btn[disabled] {
         cursor: not-allowed;
     }
 }
