--- a/src/layout/Header/Header.css
+++ b/src/layout/Header/Header.css
@@ -39,7 +39,8 @@
         height: 100%;
 
         a {
-            padding: 6px;
+            font-size: 14px;
+            padding: 2px;
             text-decoration: none;
             color: black;
             display: flex;
@@ -63,7 +64,10 @@
 
     display: flex;
     align-items: center;
-
+    a{
+        text-decoration: none;
+        font-size: 14px;
+    }
     .user-logo {
         width: 60px;
     }
@@ -89,6 +93,9 @@
         color: white;
         font-size: 12px;
         border-radius: 50%;
+    }
+    .nav-item {
+        list-style: none;
     }
 }
 
