--- a/src/layout/Header/Header.css
+++ b/src/layout/Header/Header.css
@@ -25,36 +25,49 @@
 .header-left {
   display: flex;
   flex-wrap: nowrap;
+}
 
-  .logo {
-    width: 70px;
-    height: 100%;
-  }
+.logo {
+  width: 70px;
+  height: 100%;
+}
 
-  .main-nav-list {
+.main-nav-list {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+  margin-left: 8px;
+  height: 100%;
+
+  a {
+    font-size: 14px;
+    padding: 2px;
+    text-decoration: none;
+    color: black;
     display: flex;
     align-items: center;
-    gap: 18px;
-    margin-left: 8px;
     height: 100%;
+    transition: color 0.2s;
 
-    a {
-      font-size: 14px;
-      padding: 2px;
-      text-decoration: none;
-      color: black;
-      display: flex;
-      align-items: center;
-      height: 100%;
-      transition: color 0.2s;
-
-      &:hover {
-        color: #4b80aa;
-      }
+    &:hover {
+      color: #4b80aa;
     }
+  }
+}
 
-    .nav-item {
-      list-style: none;
+.nav-item {
+  list-style: none;
+  a {
+    font-size: 14px;
+    padding: 2px;
+    text-decoration: none;
+    color: black;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    transition: color 0.2s;
+    &:hover {
+      color: #4b80aa;
     }
   }
 }
@@ -62,6 +75,7 @@
 .header-right {
   display: flex;
   align-items: center;
+
   a {
     text-decoration: none;
     font-size: 14px;
@@ -95,6 +109,23 @@
   }
   .nav-item {
     list-style: none;
+  }
+}
+
+.user-login {
+  display: flex;
+  gap: 10px;
+  height: 100%;
+  align-items: center;
+
+  span {
+    margin-right: 10px;
+  }
+
+  .separator {
+    display: flex;
+    align-items: center;
+    height: 100%;
   }
 }
 
